--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>spring-boot-cs-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-boot-cs-app</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Car Service using Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
